code/raw_code/cnn_enhancer_ortholog/logs/cnn_ocp_1006835_3.txt
2021-02-14 19:36:07.977738: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1015302/slurm_script: line 55: 17111 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
Running cyclical learning rate for MSN_SN_hgRmMm_enhVsNonEnhOrth.
One-cycle policy training for 23 epochs.
Learning rates range: 0.01 - 1.0.
Momentum rates range: 0.85 - 0.99.
Dropout: 0.05.
In evaluation mode.
No model found with specified training parameters. Please train model first.
2021-02-14 19:39:32.994809: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1015302/slurm_script: line 55: 17172 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
Running cyclical learning rate for MSN_SN_hgRmMm_enhVsNonEnhOrth.
One-cycle policy training for 23 epochs.
Learning rates range: 0.01 - 1.0.
Momentum rates range: 0.85 - 0.99.
Dropout: 0.1.
In evaluation mode.
No model found with specified training parameters. Please train model first.
2021-02-14 19:42:37.070172: F ./tensorflow/core/kernels/random_op_gpu.h:232] Non-OK-status: GpuLaunchKernel(FillPhiloxRandomKernelLaunch<Distribution>, num_blocks, block_size, 0, d.stream(), gen, data, size, dist) status: Internal: out of memory
/var/spool/slurmd/job1015302/slurm_script: line 55: 17235 Aborted                 python train_singleTask_CNN_classifier_OCP.py --mode 'train' --out_dir $DATADIR --conv_width 11 --l2_reg $L2_REG --dropout $DROPOUT --batch_size $BATCH_SIZE --epochs $EPOCHS --numCycles $NUM_CYCLES --base_lr $BASE_LR --max_lr $MAX_LR --base_m $BASE_M --max_m $MAX_M --verbose 2 --cyclical_momentum $LABEL $TRAINPOSFILE $TRAINNEGFILE $VALIDPOSFILE $VALIDNEGFILE
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
  File "train_singleTask_CNN_classifier_OCP.py", line 224
    parser = argparse.ArgumentParser(description='Parse CNN parameters.')
         ^
IndentationError: expected an indented block
